min height to stop jump

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,10 @@ body {
   height: 100%;
 }
 
+.links {
+  min-height: 28px;
+}
+
 .links a {
   line-height: 24px;
   font-size: 24px;
